--- a/packages/client/src/widgets/start/start.module.scss
+++ b/packages/client/src/widgets/start/start.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   background-image: url('/src/assets/images/start-bg.png');
-  background-color: #2180a3;
+  background-color: var(--primary-color);
   background-size: auto 90vh;
   background-repeat: repeat no-repeat;
   display: flex;
@@ -16,14 +16,14 @@
 }
 
 button.btn {
-  color: #2180a3;
+  color: var(--primary-color);
   font-size: 62px;
   font-weight: 500;
   border-radius: 72px;
   padding: 30px;
   background: #fff;
   &:hover {
-    color: #2180a3;
+    color: var(--primary-color);
     background: #fff;
     box-shadow: 0px 0px 18px 24px rgba(225, 177, 43, 0.25);
   }
