COD-17: фикс ревью

--- a/packages/client/src/widgets/image-layout/image-layout.module.scss
+++ b/packages/client/src/widgets/image-layout/image-layout.module.scss
@@ -9,10 +9,7 @@
   height: 100%;
   width: 100%;
 
-  .backgroundImg {
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: right;
+  svg {
     height: 100%;
     width: 100%;
   }
