--- a/packages/client/src/widgets/game-window/game-window.module.scss
+++ b/packages/client/src/widgets/game-window/game-window.module.scss
@@ -1,4 +1,4 @@
-#console {
+.console {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -11,7 +11,7 @@
   align-content: flex-start;
 }
 
-#consoleInput {
+.consoleInput {
   flex: 1;
   margin: 2px;
   background-color: rgba(0, 0, 0, 0.4);
@@ -22,12 +22,11 @@
   outline: none;
 }
 
-.hidden {
-  visibility: hidden;
-}
-
 .gameWindow {
   position: relative;
+  width: 640px;
+  margin: auto;
+  margin-top: 80px;
 }
 
 .consoleText {
