add: game status

--- a/packages/client/src/widgets/end-game/end-game.module.scss
+++ b/packages/client/src/widgets/end-game/end-game.module.scss
@@ -29,13 +29,17 @@ p.end {
   font-weight: 500;
   animation: rotate 1s ease-in-out infinite alternate;
 }
-p.count {
+button.again {
   border-radius: 72px;
   padding: 36px 44px;
-  background: rgba(255, 255, 255, 0.6);
-  color: #0e1d27;
+  background-color: #fff;
+  color: var(--primary-color);
   font-size: 32px;
-  font-weight: 300;
+  font-weight: 500;
+  &:hover {
+    background-color: var(--primary-color);
+    color: #ffffff;
+  }
 }
 
 @keyframes rotate {
