--- a/packages/client/src/widgets/game-window/game-window.module.scss
+++ b/packages/client/src/widgets/game-window/game-window.module.scss
@@ -27,6 +27,10 @@
   width: 640px;
   margin: auto;
   margin-top: 80px;
+
+  :global(.MuiLinearProgress-root) {
+    height: 9px;
+  }
 }
 
 .consoleText {
