--- a/packages/client/src/widgets/game-window/game-window.module.scss
+++ b/packages/client/src/widgets/game-window/game-window.module.scss
@@ -8,7 +8,7 @@
 
 .console {
   position: absolute;
-  bottom: 0;
+  bottom: 20px;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
