--- a/packages/client/src/widgets/game-window/game-window.module.scss
+++ b/packages/client/src/widgets/game-window/game-window.module.scss
@@ -1,6 +1,14 @@
+.wrapper {
+  height: 100vh;
+  min-width: max-content;
+  background-color: var(--primary-color);
+  padding-top: 80px;
+  overflow-x: hidden;
+}
+
 .console {
   position: absolute;
-  bottom: 0;
+  bottom: 20px;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
@@ -26,10 +34,34 @@
   position: relative;
   width: 640px;
   margin: auto;
-  margin-top: 80px;
 
   :global(.MuiLinearProgress-root) {
     height: 9px;
+    background-color: #d6efff;
+  }
+}
+
+.astronaut {
+  position: absolute;
+  width: 200px;
+  &:first-of-type {
+    animation: rotate 3s ease infinite alternate;
+    bottom: 55%;
+    left: -200px;
+  }
+  &:last-of-type {
+    animation: rotate 3s ease infinite alternate-reverse;
+    top: 55%;
+    right: -200px;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(-10deg);
+  }
+  100% {
+    transform: rotate(10deg);
   }
 }
 
