--- a/packages/client/src/widgets/comment/comment.module.scss
+++ b/packages/client/src/widgets/comment/comment.module.scss
@@ -9,3 +9,12 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.replyContainer {
+  display: flex;
+  padding: 6px 0px 0px 10%;
+  justify-content: space-between;
+  & span {
+    font-size: 12px;
+  }
+}
