--- a/packages/client/src/widgets/forum-layout/forum-layout.module.scss
+++ b/packages/client/src/widgets/forum-layout/forum-layout.module.scss
@@ -1,6 +1,7 @@
 .background {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  padding-bottom: 5%;
   background-color: var(--primary-color);
   display: flex;
   justify-content: center;
