--- a/packages/client/src/widgets/leaderboard/leaderboard.module.scss
+++ b/packages/client/src/widgets/leaderboard/leaderboard.module.scss
@@ -1,10 +1,3 @@
-.wr {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5vw;
-}
-
 .avatarStack {
   width: 50%;
   max-width: 500px;
@@ -45,6 +38,12 @@ div.table {
   :global(.MuiTableRow-root) {
     background-color: var(--primary-color);
   }
+}
+
+.linkBtn {
+  position: absolute !important;
+  top: 8px;
+  left: 8px;
 }
 
 @keyframes scale {
