--- a/packages/client/src/widgets/comment/comment.module.scss
+++ b/packages/client/src/widgets/comment/comment.module.scss
@@ -1,7 +1,55 @@
+.wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.smileyIcon {
+  margin: 0;
+  padding: 0;
+  margin-top: -10px;
+  width: fit-content;
+  height: fit-content;
+}
+
+.smileyReplyIcon {
+  transform: scale(.8);
+  margin: 0;
+  padding: 0;
+  margin-top: -12px;
+  width: fit-content;
+  height: fit-content;
+}
+
+.reactionBox {
+  display: flex;
+  gap: 8px;
+  margin-left: 56px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
+
+.reaction {
+  border: 1px solid white;
+  border-radius: 6px;
+  background-color: rgba(127, 205, 255, .3);
+  padding: 2px;
+  display: flex;
+  gap: 2px;
+  cursor: pointer;
+}
+
+.reactionActive {
+  background-color: rgba(127, 205, 255, 1);
+}
+
 .commentContainer {
   display: flex;
   padding: 16px 0px;
   justify-content: space-between;
+}
+
+.commentContainer:hover {
+  opacity: 0.8;
 }
 
 .commentInfo {
@@ -21,4 +69,8 @@
     width: 25px;
     height: 25px;
   }
+}
+
+.replyContainer:hover {
+  opacity: 0.8;
 }
